Font Awesome + slider fílingur í package trips

--- a/totalMerger/flight.html
+++ b/totalMerger/flight.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./img/favicon/fav.png " type="image/x-icon">
+    <link rel="stylesheet" href="./all.css">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto:700" rel="stylesheet"> 
@@ -13,7 +14,7 @@
 <body>
   <header class="header">
     <div class="header__content">
-      <a class="index__portal" href="index.html">totaltripper</a>
+      <a class="index__portal" href="index.html">totaltripper </a>
     </div>
     
   </header>
