Smá icon fetish

--- a/totalMerger/flight.html
+++ b/totalMerger/flight.html
@@ -60,10 +60,10 @@
         </div>
     </div> 
 <div class="menu">
-  <div class="menu__tab tab__active" id="tab1">Flights</div>
-  <div class="menu__tab" id="tab2" >Accommodation</div>
-  <div class="menu__tab" id="tab3">Day Trip</div>
-  <div class="menu__tab" id="tab4">Your Package</div>
+  <div class="menu__tab tab__active" id="tab1">Flights <i class="fas fa-plane"></i></div>
+  <div class="menu__tab" id="tab2" >Accommodation <i class="fas fa-hotel"></i></div>
+  <div class="menu__tab" id="tab3">Day Trip <i class="fas fa-map-marked-alt"></i></div>
+  <div class="menu__tab" id="tab4">Your Package <i class="fas fa-box"></i></div>
 </div>
 <div class="filter__content">
   <div class="filter">
