Man ekki, örugglega eitthvað Kúl

--- a/totalMerger/index.html
+++ b/totalMerger/index.html
@@ -38,10 +38,13 @@
             <p class="index__text">Check out</p>
             <input type="text" class="TinyPicker" id="endDate">
         </div>
+        <div class="index__textCont">
+            <p class="index__text">Guests</p>
         <div class="guests" id="toggle"> 
             <p class="display"> 1 adult </p><p>•</p>
             <p class="display"> 0 children </p><p>•</p>
             <p class="display"> 1 room </p>
+        </div>
         </div>
         <div class="button_cont" align="center"><a class="searchButton" href="#">Lets go!</a></div>
     </div>
